--- a/HtmlCssJsForm/index.html
+++ b/HtmlCssJsForm/index.html
@@ -12,6 +12,76 @@
 </head>
 
 <body>
-   <h1>Hello welcome to start Form input design</h1>
+    <form>
+        <header class="headerContainer">
+            <h1>HTML 5 Form input Fields and design </h1>
+        </header>
+        <div>
+            <label for="text">text input type of name:</label>
+            <input type="text" id="text" name ="text">
+            <error-output class="text-error" for ="text"></error-output>
+        </div>
+        <div>
+            <label for="pwd">password input type:</label>
+            <input type="password" id ="pwd" name="pwd" required>
+        </div>
+        <div>
+            <label for="email">email input type:</label>
+            <input type="email" id="email" name="email">
+        </div>
+        <div>
+            <label for="url">url input type:</label>
+            <input type="url" id="url" name="url">
+        </div>
+        <div>
+            <label for="number">number input type:</label>
+            <input type="number" id="number" name="number">
+        </div>
+        <div>
+            <label for="tel">tel input type:</label>
+            <input type="tel" id="tel" name="tel">
+        </div>
+        <div>
+            <label for="search">search input type:</label>
+            <input type="search" id="search" name="search">
+        </div>
+        <div class="nativeDateTimPicker">
+            <label for="startDate">choose a date and time:</label>
+            <input type="datetime-local" id="startDate" name="startDate">
+            <span class="validity"></span>
+            
+        </div>
+        <div>
+            <label for="salary">choose your salary</label>
+            <input type="range" name="salary" id="salary" min="300000"
+            max="500000" step="100" value="400000">
+         <output class="salary-output" for="salry">400000</output>
+        </div>
+          <div>
+              <button>Submit</button>
+          </div>
+    </form>
+       <script>
+         const text= document.querySelector('#text');
+            const textError = document.querySelector('.text-error');
+            text.addEventListener('input', function()
+            {
+                let nameRegex=RegExp('^[A-Z]{1}[a-z]{2,}$');
+                if(nameRegex.test(text.value))
+                textError.textContent="";
+                else
+                textError.textContent="Name is incorrect!";
+            }
+            );
+
+
+
+           const salary=document.querySelector('#salary');
+           const output= document.querySelector('.salary-output');
+           output.textContent=salary.value;
+           salary.addEventListener('input',function(){
+            output.textContent=salary.value;
+        });
+       </script>
 
 </body>
